@@ -45,7 +45,7 @@ import org.powermock.reflect.Whitebox;
 
 import java.math.BigDecimal;
 import java.util.AbstractMap.SimpleImmutableEntry;
-import java.util.Arrays;
+import java.util.List;
 import java.util.function.Supplier;
 
 /**
@@ -140,7 +140,7 @@ public class AaclScenarioWidgetTest {
     private void verifyGrid(Component component) {
         assertThat(component, instanceOf(Grid.class));
         Grid grid = (Grid) component;
-        UiTestHelper.verifyGrid(grid, Arrays.asList(
+        UiTestHelper.verifyGrid(grid, List.of(
             Triple.of("RH Account #", -1.0, 1),
             Triple.of("RH Name", -1.0, 2),
             Triple.of("Payee Account #", -1.0, 1),
