@@ -66,7 +66,6 @@ import org.powermock.reflect.Whitebox;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.ZoneId;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.Set;
@@ -124,7 +123,7 @@ public class AaclScenariosWidgetTest {
         assertThat(component, instanceOf(Grid.class));
         Grid grid = (Grid) component;
         verifyWindow(grid, null, 100, 100, Unit.PERCENTAGE);
-        verifyGrid(grid, Arrays.asList(
+        verifyGrid(grid, List.of(
             Triple.of("Name", -1.0, 1),
             Triple.of("Created Date", 100.0, -1),
             Triple.of("Status", 130.0, -1)
