@@ -23,7 +23,6 @@ import org.junit.runners.Parameterized;
 import org.junit.runners.Parameterized.Parameters;
 import org.powermock.reflect.Whitebox;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Set;
@@ -40,7 +39,7 @@ import java.util.Set;
 @RunWith(Parameterized.class)
 public class FasExcludeRightsholdersSearchTest {
 
-    private static final List<RightsholderPayeePair> CONTAINER_DATA = Arrays.asList(
+    private static final List<RightsholderPayeePair> CONTAINER_DATA = List.of(
         buildPair(1000000413L, "Times Mirror Magazines, Inc. [T]", 1000004155L, "Spectator Limited"),
         buildPair(1000004191L, "Klasing & Co [T]", 1000004271L, "Keith-Stevens Inc"),
         buildPair(7000425425L, "Kelton Publications", 7000425807L, "Desktop Communications"),
@@ -62,7 +61,7 @@ public class FasExcludeRightsholdersSearchTest {
 
     @Parameters
     public static Collection<Object[]> data() {
-        return Arrays.asList(
+        return List.of(
             new Object[][]{{"Times Mirror Magazines, Inc. [T]", Set.of(CONTAINER_DATA.get(0))},
                 {"Klasing", Set.of(CONTAINER_DATA.get(1))},
                 {"Invalid name", Set.of()},
