@@ -16,8 +16,7 @@ import org.apache.commons.lang3.StringUtils;
 import org.junit.Before;
 import org.junit.Test;
 
-import java.util.Arrays;
-import java.util.HashSet;
+import java.util.Set;
 
 /**
  * Test for {@link CommonAclAppliedFilterPanel}.
@@ -56,7 +55,7 @@ public class CommonAclAppliedFilterPanelTest {
         expectedLabel.setValue("<li><b><i>Assignees: </i></b>user@copyright.com, john@copyright.com</li>");
         assertNull(filterPanel.createLabelWithMultipleValues(udmUsageFilter.getAssignees(), "label.assignees",
             String::valueOf));
-        udmUsageFilter.setAssignees(new HashSet<>(Arrays.asList("user@copyright.com", "john@copyright.com")));
+        udmUsageFilter.setAssignees(Set.of("user@copyright.com", "john@copyright.com"));
         Label actualLabel = filterPanel.createLabelWithMultipleValues(udmUsageFilter.getAssignees(), "label.assignees",
             String::valueOf);
         verifyLabel(actualLabel);
